Fix CORS for Vercel production and enhance RateLimit headers